--- a/src/app/modules/auth/pages/login/login.component.scss
+++ b/src/app/modules/auth/pages/login/login.component.scss
@@ -37,7 +37,7 @@
     align-items: center;
     border-radius: 5px;
     .form-control {
-      display: block;
+      width: 100%;
     }
     .submit {
       margin-top: 12px;
