--- a/src/app/modules/dashboard/pages/quiz/quiz.component.html
+++ b/src/app/modules/dashboard/pages/quiz/quiz.component.html
@@ -1,1 +1,21 @@
-<p>quiz works!</p>
+<div class="quiz">
+  <div class="buttons">
+    <button
+      mat-button
+      color="{{togglePage ? 'accent' : 'primary' }}"
+      routerLink="/dashboard/quiz/questions"
+      (click)="togglePage = true">
+      Questions
+    </button>
+    <button
+      mat-button
+      color="{{!togglePage ? 'accent': 'primary'}}"
+      routerLink="/dashboard/quiz/recommendations"
+      (click)="togglePage = false">
+      Recomendations
+    </button>
+  </div>
+  <div class="section">
+    <router-outlet></router-outlet>
+  </div>
+</div>
