--- a/src/app/shared/components/UI/input/input.component.html
+++ b/src/app/shared/components/UI/input/input.component.html
@@ -1,27 +1,51 @@
-<mat-form-field class="example-form-field">
+<!--<div class="form-control">-->
+<!--    <mat-form-field class="example-form-field" >-->
+<!--      <mat-label *ngIf="options.placeholder">{{options.placeholder}}</mat-label>-->
+<!--      <input matInput-->
+<!--             (blur)="onTouch()"-->
+<!--             (input)="onChange($event.target.value)"-->
+<!--             [(ngModel)]="value"-->
+<!--             type="text">-->
+<!--      <button mat-button-->
+<!--              *ngIf="val"-->
+<!--              matSuffix-->
+<!--              mat-icon-button-->
+<!--              aria-label="Clear"-->
+<!--              (click)="value = ''"-->
+<!--      >-->
+<!--        <mat-icon>close</mat-icon>-->
+<!--      </button>-->
+<!--      <mat-error *ngIf="control.hasError('required')">-->
+<!--        {{requiredMsg}}-->
+<!--      </mat-error>-->
+<!--    </mat-form-field>-->
+<!--</div>-->
 
-  <mat-label *ngIf="options.placeholder">{{options.placeholder}}</mat-label>
-  <input matInput
-         type="text"
-         (blur)="onTouch()"
-         (input)="onChange($event.target.value)"
-         [value]="value">
-  <button mat-button
-          *ngIf="value"
-          [attr.maxLength] = "options.maxLength"
-          [attr.minLength] = "options.minLength"
-          matSuffix
-          mat-icon-button
-          aria-label="Clear"
-          (click)="value = ''"
-  >
-    <mat-icon>close</mat-icon>
-  </button>
-<!--  <mat-error>-->
-<!--    Login is <strong>required</strong>-->
+
+
+
+
+<!--<mat-form-field class="example-form-field" >-->
+
+<!--  <mat-label *ngIf="options.placeholder">{{options.placeholder}}</mat-label>-->
+<!--  <input matInput-->
+<!--         type="text"-->
+<!--         (blur)="onTouch()"-->
+<!--         (input)="onChange($event.target.value)"-->
+<!--         [value]="value">-->
+<!--  <button mat-button-->
+<!--          *ngIf="value"-->
+<!--          [attr.maxLength] = "options.maxLength"-->
+<!--          [attr.minLength] = "options.minLength"-->
+<!--          matSuffix-->
+<!--          mat-icon-button-->
+<!--          aria-label="Clear"-->
+<!--          (click)="value = ''"-->
+<!--  >-->
+<!--    <mat-icon>close</mat-icon>-->
+<!--  </button>-->
+<!--  <mat-error *ngIf="control.hasError('required')">-->
+<!--    {{requiredMsg}}-->
 <!--  </mat-error>-->
-<!--  <mat-error *ngIf="login.hasError('required')">-->
-<!--    Login is <strong>required</strong>-->
-<!--  </mat-error>-->
-</mat-form-field>
+<!--</mat-form-field>-->
 
