--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,6 @@ html, body {
   margin: 0;
   width: 100%;
   height: 100%;
-  overflow: hidden;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
@@ -59,6 +58,15 @@ html, body {
     left: 56px;
     animation: lds-ellipsis3 0.6s infinite;
   }
+
+  .add-btn{
+    display: flex;
+    align-items: center;
+    span {
+      margin-left: 12px;
+    }
+  }
+
   @keyframes lds-ellipsis1 {
     0% {
       transform: scale(0);
