--- a/src/app/modules/auth/pages/login/login.component.html
+++ b/src/app/modules/auth/pages/login/login.component.html
@@ -7,17 +7,17 @@
      <h1>Login</h1>
      <mat-form-field class="form-control">
        <mat-label>Login</mat-label>
-       <input matInput type="text" formControlName="login">
+       <input matInput type="text" formControlName="email">
        <button mat-button
-               *ngIf="login.value"
+               *ngIf="email.value"
                matSuffix
                mat-icon-button
                aria-label="Clear"
-               (click)="login.patchValue('')"
+               (click)="email.patchValue('')"
        >
          <mat-icon>close</mat-icon>
        </button>
-       <mat-error *ngIf="login.hasError('required')">
+       <mat-error *ngIf="email.hasError('required')">
          Login is <strong>required</strong>
        </mat-error>
       </mat-form-field>
@@ -35,6 +35,9 @@
         </button>
         <mat-error *ngIf="password.hasError('required')">
           Password is <strong>required</strong>
+        </mat-error>
+        <mat-error *ngIf="password.hasError('required') && password.hasError('minLength')">
+          Min length must 5
         </mat-error>
       </mat-form-field>
      <a href="#" class="forgot-password">Forgot password?</a>
