--- a/src/app/modules/auth/pages/start-page/start-page.component.html
+++ b/src/app/modules/auth/pages/start-page/start-page.component.html
@@ -1,1 +1,2 @@
 <button mat-button color="primary" routerLink="/login" >Login</button>
+<button mat-button color="primary" routerLink="/registration" >registration</button>
