--- a/src/app/modules/dashboard/pages/users/pages/students/students.component.html
+++ b/src/app/modules/dashboard/pages/users/pages/students/students.component.html
@@ -1,11 +1,11 @@
 <div class="students-page">
   <div class="students-page-header">
-    <button mat-button color="accent" class="add-btn">
+    <button mat-button color="accent" class="add-btn" (click)="inviteUsers()">
       <mat-icon aria-hidden="false" aria-label="Example home icon">add</mat-icon>
-      <span>Add recommendation block</span>
+      <span>Invite users</span>
     </button>
     <div class="search-filter">
-      <mat-form-field>
+      <mat-form-field class="form-control">
         <mat-label>Favorite food</mat-label>
         <mat-select>
           <mat-option *ngFor="let food of foods" [value]="food.value">
@@ -13,7 +13,7 @@
           </mat-option>
         </mat-select>
       </mat-form-field>
-      <mat-form-field>
+      <mat-form-field class="form-control">
         <mat-label>Favorite food</mat-label>
         <mat-select>
           <mat-option *ngFor="let food of foods" [value]="food.value">
@@ -31,27 +31,36 @@
     <!-- Position Column -->
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.position + 1}} </td>
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="fullName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Full Name: </th>
-      <td mat-cell *matCellDef="let element"> {{element.fullName}} </td>
-    </ng-container>
-
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Email: </th>
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
     </ng-container>
-    <ng-container matColumnDef="state">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> State: </th>
-      <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+
+    <ng-container matColumnDef="fullName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Full Name: </th>
+      <td mat-cell *matCellDef="let element"> {{element.fullName}} </td>
     </ng-container>
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="students">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Students: </th>
-      <td mat-cell *matCellDef="let element"> {{element.students}} </td>
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Status: </th>
+      <td mat-cell *matCellDef="let element"> {{element.status ? 'Activated' : 'No activated'}} </td>
+    </ng-container>
+     Symbol Column
+    <ng-container matColumnDef="mentor">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Mentor: </th>
+      <td mat-cell *matCellDef="let element">
+        <mat-form-field class="form-control">
+          <mat-label>Favorite food</mat-label>
+          <mat-select>
+            <mat-option *ngFor="let mentor of mentorList" [value]="mentor.id">
+              {{mentor.firstName}} {{mentor.lastName}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
