--- a/src/app/modules/dashboard/pages/users/pages/students/students.component.html
+++ b/src/app/modules/dashboard/pages/users/pages/students/students.component.html
@@ -5,36 +5,34 @@
       <span>Invite users</span>
     </button>
     <div class="search-filter">
-      <mat-form-field class="form-control">
-        <mat-label>Favorite food</mat-label>
-        <mat-select>
-          <mat-option *ngFor="let food of foods" [value]="food.value">
-            {{food.viewValue}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field class="form-control">
-        <mat-label>Favorite food</mat-label>
-        <mat-select>
-          <mat-option *ngFor="let food of foods" [value]="food.value">
-            {{food.viewValue}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field class="form-control">
-        <input matInput value="Sushi">
-      </mat-form-field>
-    </div>
+    <mat-form-field class="form-control">
+      <mat-label>Favorite food</mat-label>
+      <mat-select>
+        <mat-option *ngFor="let food of foods" [value]="food.value">
+          {{food.viewValue}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field class="form-control">
+      <mat-label>Favorite food</mat-label>
+      <mat-select>
+        <mat-option *ngFor="let food of foods" [value]="food.value">
+          {{food.viewValue}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field class="form-control">
+      <input matInput value="Sushi">
+    </mat-form-field>
+  </div>
   </div>
   <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
-    <!-- Position Column -->
     <ng-container matColumnDef="position">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
       <td mat-cell *matCellDef="let element"> {{element.position + 1}} </td>
     </ng-container>
 
-    <!-- Name Column -->
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Email: </th>
       <td mat-cell *matCellDef="let element"> {{element.email}} </td>
@@ -62,7 +60,14 @@
         </mat-form-field>
       </td>
     </ng-container>
-
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element; let i = index">
+        <div class="delete-btn" (click)="delete(i)">
+          <mat-icon aria-hidden="false" aria-label="Example home icon">delete</mat-icon>
+        </div>
+      </td>
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
